added rabbitmq service

--- a/manifest-unversioned.yml
+++ b/manifest-unversioned.yml
@@ -10,4 +10,4 @@ applications:
 - name: quotes
   random-route: true
   path: libs/quotes-${version}.jar
-  services: [ discovery-service, circuit-breaker-dashboard, config-server ]
+  services: [ discovery-service, circuit-breaker-dashboard, config-server, zipkinRabbit ]
