--- a/build.gradle
+++ b/build.gradle
@@ -94,9 +94,11 @@ dependencies {
 		compile "org.springframework.boot:spring-boot-starter-web"
 		compile "org.springframework.boot:spring-boot-starter-actuator"
 		compile "org.springframework.cloud:spring-cloud-starter-sleuth"
-		compile "org.springframework.cloud:spring-cloud-starter-zipkin"
+		//compile "org.springframework.cloud:spring-cloud-starter-zipkin"
+		compile "org.springframework.cloud:spring-cloud-sleuth-zipkin-stream"
+		compile "org.springframework.cloud:spring-cloud-stream-binder-rabbit"
 
-		
+
 		compile "io.pivotal.spring.cloud:spring-cloud-services-starter-config-client"
 		compile "io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry"
 		compile "io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker"
