--- a/ci/quotes-service/pipeline.yml
+++ b/ci/quotes-service/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
     resource: cf-env
     params:
       command: delete
-      app_name: quotes-service
+      app_name: quotes
       delete_mapped_routes: true
   - aggregate:
     - put: cf-delete-service
@@ -47,6 +47,11 @@ jobs:
       params:
         command: delete-service
         service_instance: circuit-breaker-dashboard
+    - put: cf-delete-service
+      resource: cf-env
+      params:
+        command: delete-service
+        service_instance: zipkinRabbit
 
 - name: build-quotes
   public: true
@@ -57,8 +62,8 @@ jobs:
     trigger: true
   - task: build
     file: quotes-service/ci/tasks/build-quotes-service/task.yml
-#    params:
-#      ARTIFACT_ID: {{service-name}}
+    params:
+      ARTIFACT_ID: quotes
   - put: cf-zero-downtime-push
     resource: cf-env
     params:
@@ -110,6 +115,15 @@ jobs:
         service: p-circuit-breaker-dashboard
         plan: standard
         service_instance: circuit-breaker-dashboard
+        timeout: 300
+        wait_for_service: true
+    - put: cf-create-service
+      resource: cf-env
+      params:
+        command: create-service
+        service: p-rabbitmq
+        plan: standard
+        service_instance: zipkinRabbit
         timeout: 300
         wait_for_service: true
 
